--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,3 +4,7 @@ ruff==0.6.9
 black==24.8.0
 isort==5.13.2
 pre-commit==3.8.0
+fastapi==0.115.2
+uvicorn==0.32.0
+python-multipart==0.0.12
+sqlalchemy==2.0.35
