--- a/compose.yaml
+++ b/compose.yaml
@@ -4,5 +4,16 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - PYTHONUNBUFFERED=1
-    profiles: ["dev"]
+      - FAKE_TOKEN=${FAKE_TOKEN}
+    env_file:
+      - .env.example
+    volumes:
+      - ./uploads:/app/uploads
+    tmpfs:
+      - /tmp
+    cap_drop:
+      - ALL
+    cap_add:
+      - NET_BIND_SERVICE
+    security_opt:
+      - no-new-privileges:true
