--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ target-version = "py311"
 exclude = ["venv", ".venv", "build", "dist"]
 
 [tool.ruff.lint]
-select = ["E", "F", "W", "I"]
+select = ["E", "F", "W"]
 
 [tool.isort]
 profile = "black"
